# streamlit-passwordless

./: .flake8  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml
conda/: streamlit_passwordless_dev.yml  streamlit_passwordless_dev_linux-64_lock.yml
examples/: README.md  __init__.py  app.py  mvp.py
examples/app/: __init__.py  components.py  main.py
examples/app/_pages/: __init__.py  admin.py  home.py  register_and_sign_in.py
src/streamlit_passwordless/: __init__.py  __main__.py  auth.py  authorization.py  common.py  config.py  exceptions.py  metadata.py  models.py  web.py
src/streamlit_passwordless/app/: __init__.py  config.py  main.py  session_state.py
src/streamlit_passwordless/app/components/: __init__.py  admin.py  keys.py
src/streamlit_passwordless/app/controllers/: __init__.py  admin.py  init.py  sign_in.py
src/streamlit_passwordless/app/logic/: __init__.py  admin.py
src/streamlit_passwordless/app/pages/: __init__.py  admin.py  init.py  sign_in.py
src/streamlit_passwordless/app/views/: __init__.py  admin.py  init.py  sign_in.py
src/streamlit_passwordless/bitwarden_passwordless/: __init__.py  backend.py  cache.py  client.py  frontend.py
src/streamlit_passwordless/bitwarden_passwordless/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
src/streamlit_passwordless/bitwarden_passwordless/frontend/public/: button.css  index.html
src/streamlit_passwordless/bitwarden_passwordless/frontend/src/: index.tsx  main.ts
src/streamlit_passwordless/cli/: __init__.py  main.py
src/streamlit_passwordless/cli/commands/: __init__.py  run.py
src/streamlit_passwordless/components/: __init__.py  config.py  core.py  create_user_form.py  delete_user_button.py  ids.py  register_form.py  sign_in.py  sign_in_form.py  sign_out.py  update_user_form.py
src/streamlit_passwordless/database/: __init__.py  cache.py  core.py  models.py
src/streamlit_passwordless/database/crud/: __init__.py  custom_role.py  email.py  role.py  user.py  user_sign_in.py
src/streamlit_passwordless/database/schemas/: __init__.py  core.py  role.py  user.py  user_sign_in.py
tests/: config.py  conftest.py  test_auth.py  test_config.py  test_models.py
tests/static_files/: __init__.py
tests/static_files/components/: __init__.py  admin_page.py  home_page.py  main.py  register_page.py  sign_in_page.py
tests/test_bitwarden_passwordless/: test_backend.py  test_client.py  test_frontend.py
tests/test_components/: __init__.py  test_sign_in.py  test_sign_out.py
tests/test_database/: __init__.py  helpers.py  test_models.py
tests/test_database/test_crud/: __init__.py  test_custom_role.py  test_email.py  test_role.py  test_user.py
